CB-32254 Make the `GcpDiskResourceBuilder` use the root disk type from the template instead of a hard-coded value
The `GcpDiskResourceBuilder` had the type of the root disk hard-coded instead of using the value from the template like we do for AWS and Azure. This commit fixes this, and also changes the `defaultRootDiskType` value in `GcpPlatformParameters` to the old hard-coded value that we have been already using.

Also, fixed the default root disk type's value being hard-coded in many places for AWS. These places now use the value from the `AwsPlatformParameters.defaultRootDiskType()`.